--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
                         <p>Want to login?</p>
                         <% } %>
                             <div>
-                                <% data.forEach(hero=> { %>
+                                <% myData.forEach(hero=> { %>
                                     <p>
                                         <%= hero.name %>
                                             ist
