--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/head') %>
     <%- include('./partials/navigation') %>
-        <section>
-
-        </section>
+        <h1>
+            <%= userID %>
+        </h1>
         <%- include('./partials/footer') %>
